# yaml2svd

./: LICENSE  README.md  pyproject.toml  yaml2svd.py
example-core/: CORE_NAME.svd  top.yaml
example-core/Peripherals/: DESS-0.1.0.yaml  GPIO-0.1.0.yaml  UART-0.1.0.yaml
src/: yaml2svd.py
